--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                     <div class="grid-item mode">
                         <div class="flex-center-parent" style="margin-right: 0%;">
                             <p style="margin:0; font-size:1rem;">Language : &nbsp;&nbsp;</p>
-                            <a href="https://www.img.in.th/image/7TGS22"><img src="https://www.img.in.th/images/3e20f0d5eca96418336c63f636545ba6.th.png" alt="3e20f0d5eca96418336c63f636545ba6.png" border="0" width="20vw"/></a></a>
+                            <a href=""><img src="https://www.img.in.th/images/3e20f0d5eca96418336c63f636545ba6.th.png" alt="3e20f0d5eca96418336c63f636545ba6.png" border="0" width="20vw"/></a></a>
                             <p style="margin:0; font-size:1rem;">&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;</p>
-                            <a href="https://www.img.in.th/image/7TG3JM"><img src="https://www.img.in.th/images/c23f8765163cc41998813936b81f9519.th.png" alt="c23f8765163cc41998813936b81f9519.png" border="0" width="18vw"/></a>
+                            <a href=""><img src="https://www.img.in.th/images/c23f8765163cc41998813936b81f9519.th.png" alt="c23f8765163cc41998813936b81f9519.png" border="0" width="18vw"/></a>
                             <p style="margin:0; font-size:1rem;">&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;</p>
                         </div>
                     </div>
